<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notifications for quup</string>

    <string name="error_title">Error: Whoops!</string>
    <string name="error_details">Make sure your device is connected to the internet.\n\nIf you are trying to login, your username or password might be invalid.\n\nOtherwise, quup Notifications Server or quup itself might be down.\n\nPlease try again later and if error continues, inform the developer.</string>
    <string name="error_back">Go Back</string>
    <string name="error_nonEmpty">This value is cannot be empty!</string>

    <string name="loading">Loading, please wait</string>

    <string name="feedback_subject">About Notifications for quup Application</string>

    <string name="main_welcome">Welcome!\nPlease login to continue.</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login">Log In</string>

    <string name="welcome_info">You are logged in as:</string>
    <string name="welcome_logout">Log Out</string>

    <string name="more_more">More</string>
    <string name="more_notifications_title">Notification Settings</string>
    <string name="more_notifications_sound">Sound</string>
    <string name="more_notifications_sound_silent">Silent</string>
    <string name="more_notifications_vibrate">Vibrate</string>
    <string name="more_notifications_types">Notification Types</string>
    <string name="more_notifications_types_summary">Select what events should show notifications.</string>
    <string name="more_notifications_enabled_comment">Someone comments on your quup</string>
    <string name="more_notifications_enabled_like">Someone likes your quup</string>
    <string name="more_notifications_enabled_commentLike">Someone likes your comment</string>
    <string name="more_notifications_enabled_follow">Someone follows you</string>
    <string name="more_notifications_enabled_mention">Someone mentions you</string>
    <string name="more_notifications_enabled_share">Someone shares your quup</string>
    <string name="more_notifications_enabled_message">Someone messages you</string>
    <string name="more_about_title">About</string>
    <string name="more_about_rate">Rate &amp; Comment</string>
    <string name="more_about_feedback">Send Feedback</string>
    <string name="more_about_version">Version</string>
    <string name="more_about_openSource">Open Source Licenses</string>

    <string name="notifications_comment">commented on your quup.</string>
    <string name="notifications_like">liked your quup.</string>
    <string name="notifications_commentLike">liked your comment.</string>
    <string name="notifications_follow">started following you.</string>
    <string name="notifications_mention">mentioned you.</string>
    <string name="notifications_share">shared your quup.</string>
    <string name="notifications_message">messaged you.</string>
    <string name="notifications_otherUsers">and %1d others</string>
    <string name="notifications_title">%1d Notifications</string>
    <string name="notifications_profile">Go to Profile</string>
</resources>
