<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/spacing_medium"
    android:layout_marginRight="@dimen/spacing_medium"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        android:textSize="@dimen/textSize_large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:gravity="center"
        android:text="@string/error_details"
        android:textSize="@dimen/textSize_medium" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        style="?android:textAppearanceButton"
        android:text="@string/error_back"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:theme="@style/QuupNotifications.Button" />
</LinearLayout>
